--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Merhaba Musti
-    !</h1>
+    <h1>Merhaba Musti!</h1>
     <p>İlk web siteme hoş geldin.</p>
 
     <script src="script.js"></script>
