--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benim Web Sitem</title>
+    <title>Benim Oyunlarım</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Merhaba Musti!</h1>
-    <p>İlk web siteme hoş geldin.</p>
-
-    <script src="script.js"></script>
+    <h1>🎮 Benim Oyunlarım</h1>
+    <ul class="oyun-listesi">
+        <li><a href="oyunlar/oyun1.html" target="_blank">🕹️ Oyun 1</a></li>
+        <li><a href="oyunlar/oyun2.html" target="_blank">🕹️ Oyun 2</a></li>
+        <!-- Yeni oyun eklemek için sadece aşağı satır gibi bir tane daha ekle -->
+        <!-- <li><a href="oyunlar/oyun3.html" target="_blank">🕹️ Oyun 3</a></li> -->
+    </ul>
 </body>
 </html>
