--- a/index.html
+++ b/index.html
@@ -15,3 +15,7 @@
     </ul>
 </body>
 </html>
+<li>
+  <a href="oyunlar/ziplama-oyunu.zip" download>🕹️ Zıplama Oyunu</a>
+  <p>Küçük bir platform oyunu. W-A-S-D ile hareket et.</p>
+</li>
