--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </body>
 </html>
 <ul class="oyun-listesi">
-    <li><a href="sayıtahmini.zip" download>🕹️ Zıplama Oyunu (indir)</a></li>
+    <li><a href="oyunlar/sayıtahmini.zip" download>🕹️ Zıplama Oyunu (indir)</a></li>
 </ul>
 <li>
     <li>
-        <a href="sayıtahmini.zip" download>🕹️ Tahmin Oyunu</a>
+        <a href="oyunlar/sayıtahmini.zip" download>🕹️ Tahmin Oyunu</a>
         <p>Küçük bir platform oyunu. Sayıları tahmin et.</p>
       </li>
       
