--- a/index.html
+++ b/index.html
@@ -23,4 +23,6 @@
         <a href="oyunlar/sayıtahmini.zip" download>🕹️ Tahmin Oyunu</a>
         <p>Küçük bir platform oyunu. Sayıları tahmin et.</p>
       </li>
-      
+      <li>
+        <a href="https://direct-link.net/1339475/sayi-tahimi-oyunu" target="_blank">⬇️ Zıplama Oyunu (Reklamdan sonra indir)</a>
+      </li>
