--- a/index.html
+++ b/index.html
@@ -8,19 +8,14 @@
 <body>
     <h1>🎮 Benim Oyunlarım</h1>
     <ul class="oyun-listesi">
-        <li><a href="oyunlar/oyun1.html" target="_blank">🕹️ Oyun 1</a></li>
-        <li><a href="oyunlar/oyun2.html" target="_blank">🕹️ Oyun 2</a></li>
-        <!-- Yeni oyun eklemek için sadece aşağı satır gibi bir tane daha ekle -->
-        <!-- <li><a href="oyunlar/oyun3.html" target="_blank">🕹️ Oyun 3</a></li> -->
-    </ul>
 </body>
 </html>
 <ul class="oyun-listesi">
-    <li><a href="oyunlar/sayıtahmini.zip" download>🕹️ Zıplama Oyunu (indir)</a></li>
+    <li><a href="oyunlar/sayıtahminii.zip" download>🕹️ Henüz Oyun Yok (indir)</a></li>
 </ul>
 <li>
     <li>
-        <a href="oyunlar/sayıtahmini.zip" download>🕹️ Tahmin Oyunu</a>
+        <a href="oyunlar/sayıtahminii.zip" download>🕹️ Henüz Oyun Yok </a>
         <p>Küçük bir platform oyunu. Sayıları tahmin et.</p>
       </li>
       <li>
