--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </body>
 </html>
 <ul class="oyun-listesi">
-    <li><a href="oyunlar/sayıtahminii.zip" download>🕹️ Henüz Oyun Yok (indir)</a></li>
+    <li><a href="oyunlar/sayıtahminii.zip" download>🕹️ Henüz Oyun Yok </a></li>
 </ul>
 <li>
     <li>
