--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
         <p>Küçük bir platform oyunu. Sayıları tahmin et.</p>
       </li>
       <li>
-        <a href="https://direct-link.net/1339475/sayi-tahimi-oyunu" target="_blank">⬇️ Zıplama Oyunu (Reklamdan sonra indir)</a>
+        <a href="https://direct-link.net/1339475/sayi-tahimi-oyunu" target="_blank">⬇️ Zıplama Oyunu (Reklam atlaman gerekicek para lazım :D)</a>
       </li>
