--- a/index.html
+++ b/index.html
@@ -21,3 +21,18 @@
       <li>
         <a href="https://direct-link.net/1339475/sayi-tahimi-oyunu" target="_blank">⬇️ Tahmin Oyunu (Reklam atlaman gerekicek para lazım 😊)</a>
       </li>
+<title>Recep İvedik Nah Efekti</title>
+          <link rel="stylesheet" href="styles.css">
+      </head>
+      <body>
+          <!-- Sağ alt link -->
+          <div id="link-container">
+              <a href="https://youtube.com/shorts/qW2swIU-O8M?si=I2bDJGUbGVfQrMPJ" class="nah-link" target="_blank">Nah!</a>
+          </div>
+      
+          <!-- Recep İvedik Fotoğrafı (Başlangıçta görünmeyecek) -->
+          <div id="nah-image-container">
+              <img src="https://link-to-recep-ivedik-nah-foto.jpg" alt="Recep İvedik Nah" id="nah-image">
+          </div>
+      </body>
+      </html>
