--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </ul>
 <li>
     <li>
-        <a href="oyunlar/sayıtahminii.zip" download>🕹️ Henüz Oyun Yok </a>
+        <a href="oyunlar/Soundpad.zip" download>🕹️ Henüz Oyun Yok </a>
         <p>Küçük bir platform oyunu. Sayıları tahmin et.</p>
       </li>
       <li>
