--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </ul>
 <li>
     <li>
-        <a href="oyunlar/Soundpad.zip" download>🕹️ Henüz Oyun Yok </a>
+        <a href="oyunlar/Soundpadd.zip" download>🕹️ Henüz Oyun Yok </a>
         <p>Küçük bir platform oyunu. Sayıları tahmin et.</p>
       </li>
       <li>
-        <a href="https://direct-link.net/1339475/sayi-tahimi-oyunu" target="_blank">⬇️ Tahmin Oyunu (Reklam atlaman gerekicek para lazım 😊)</a>
+        <a href="https://link-hub.net/1339475/emolinin-soundpadi" target="_blank">⬇️ Tahmin Oyunu (Reklam atlaman gerekicek para lazım 😊)</a>
       </li>
 <title>Recep İvedik Nah Efekti</title>
           <link rel="stylesheet" href="styles.css">
