--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Küçük bir platform oyunu. Sayıları tahmin et.</p>
       </li>
       <li>
-        <a href="https://link-hub.net/1339475/emolinin-soundpadi" target="_blank">⬇️ Tahmin Oyunu (Reklam atlaman gerekicek para lazım 😊)</a>
+        <a href="https://link-hub.net/1339475/emolinin-soundpadi" target="_blank">⬇️ Emolinin Soundpadi (Reklam atlaman gerekicek para lazım 😊)</a>
       </li>
 <title>Recep İvedik Nah Efekti</title>
           <link rel="stylesheet" href="styles.css">
